@@ -1,1 +1,3 @@
-#
+# this is the statusmessages module
+
+STATUSMESSAGEKEY = 'statusmessages'
